# restaurant-picker

./: .gitignore  ARCHITECTURE_CHANGES.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  restaurants.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  crud.py  models.py
backend/app/models/: restaurant.py
backend/app/schemas/: restaurants.py
backend/app/services/: picker.py  providers.py
backend/scripts/: seed_database.py
frontend/src/: App.tsx
frontend/src/api/: client.ts  restaurants.ts
frontend/src/components/layout/: PageLayout.tsx
frontend/src/components/restaurants/: PickedRestaurants.tsx  RestaurantList.tsx  RestaurantSearchForm.tsx
frontend/src/hooks/: useRestaurantSearch.ts
frontend/src/types/: restaurant.ts
