[project]
name = "restaurant-picker"
version = "0.1.0"
description = "A restaurant picker application"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "httpx",
]
  [project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]
  [tool.uv]
