[project]
name = "restaurant-picker"
version = "0.1.0"
description = "A restaurant picker application"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "httpx",
  "sqlalchemy>=2.0.0",
  "alembic>=1.12.0",
  "aiosqlite>=0.19.0",
]
  [project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "faker",
]
  [tool.uv]
